# httpaudioserver

./: CMakeLists.txt  README.md
dev/httpserver-dev/lib/: libqhttpserver.so.0.1.0
src/: handle.cpp  handle.h  main.cpp  player.cpp  player.h  server.cpp  server.h  upload_handle.cpp  upload_handle.h
